fix: mobile ui alignments fixed

--- a/docs/src/App.css
+++ b/docs/src/App.css
@@ -43,7 +43,7 @@ body {
   #root {
     max-width: 100%;
     margin: 0 auto;
-    padding: 1rem;
+    padding: 0;
     overflow-x: hidden;
   }
 
@@ -53,9 +53,10 @@ body {
 
   .content {
     margin: 0 !important;
-    max-width: 85%;
+    max-width: 100%;
     text-align: center;
-    padding: 1rem;
+    padding: 0;
+    padding-top: 20px;
   }
 
   .text {
