--- a/docs/src/components/public/styles/CodeBlock.css
+++ b/docs/src/components/public/styles/CodeBlock.css
@@ -5,7 +5,7 @@
   padding: .8rem;
   border-radius: 8px;
   font-family: monospace;
-  overflow-x: auto;
+  overflow-x: hidden;
   margin-bottom: 1.5rem;
   display: flex;
   justify-content: space-between;
@@ -21,14 +21,10 @@
 
   .code-block {
     flex-direction: column;       
-    align-items: flex-start;      
-    padding: 1rem;
-    width: 100%;
+    align-items: center;      
+    padding: .5rem;
+    width: 95%;
     margin: 0;
   }
 
-  .text {
-    font-size: 5px;
-    text-align: center;
-  }
 }
